# LeanProbe

./: .gitignore  AGENT.md  AGENTS.md  BENCHMARKS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  pylint.yml  release.yml
examples/: benchmark_cases.json
examples/lean/: icml26_binary_heap.lean  icml26_treap_analysis.lean  icml26_weighted_graph_prefix.lean  tcs_binary_heap.lean  tcs_treap_analysis.lean  tcs_weighted_graph_prefix.lean
src/lean_probe/: __init__.py  benchmark.py  cli.py  core.py  mcp_server.py
tests/: test_benchmark.py  test_cli.py  test_core.py  test_integration.py  test_mcp_server.py
