[build-system]
requires = ["setuptools>=77.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lean-probe"
version = "0.4.0"
description = "Fast Lean 4 proof feedback for agents, powered by LeanInteract."
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "LeanProbe contributors" }]
license = "MIT"
keywords = ["Lean", "Lean 4", "theorem proving", "MCP", "agents", "LeanInteract"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Scientific/Engineering :: Mathematics",
  "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
  "lean-interact>=0.11.0,<1",
  "mcp>=1.2.0,<2",
]

[project.optional-dependencies]
# `mcp` is a core dependency as of 0.3.1; this extra is kept as a no-op so existing
# `pip install 'lean-probe[mcp]'` commands and configs keep working.
mcp = []
dev = ["build", "mypy", "pre-commit", "pytest", "pytest-xdist", "ruff", "twine"]

[project.scripts]
lean-probe = "lean_probe.cli:main"

[project.urls]
Homepage = "https://github.com/epfl-lara/LeanProbe"
Documentation = "https://github.com/epfl-lara/LeanProbe#readme"
Issues = "https://github.com/epfl-lara/LeanProbe/issues"
Source = "https://github.com/epfl-lara/LeanProbe"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
lean_probe = ["py.typed", "skill/SKILL.md"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
markers = [
  "integration: optional real Lean/LeanInteract integration tests",
]

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
mypy_path = "src"
ignore_missing_imports = true
strict = false
warn_unused_ignores = true
